--- a/library-base/src/main/res/values/dimens.xml
+++ b/library-base/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="picture_size">66dp</dimen>
+    <dimen name="picture_width">88dp</dimen>
+    <dimen name="picture_height">66dp</dimen>
 </resources>
