--- a/library-common/src/main/res/layout/picture_title_view.xml
+++ b/library-common/src/main/res/layout/picture_title_view.xml
@@ -11,27 +11,48 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/dp_10"
+        android:paddingBottom="@dimen/dp_10">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/dp_100"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="@{viewModel.title}"
+                android:textSize="@dimen/sp_16" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
+                android:text="@{viewModel.authorName}"
+                android:textSize="@dimen/sp_12" />
+
+        </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
             app:cardCornerRadius="@dimen/d5">
 
             <ImageView
-                android:layout_width="@dimen/picture_size"
-                android:layout_height="@dimen/picture_size"
+                android:layout_width="@dimen/picture_width"
+                android:layout_height="@dimen/picture_height"
                 android:scaleType="fitXY"
                 app:imageUrl="@{viewModel.thumbnailPic}" />
         </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="90dp"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:text="@{viewModel.title}"
-            android:textSize="16sp" />
     </FrameLayout>
 </layout>
