--- a/library-common/src/main/res/values/dimens.xml
+++ b/library-common/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="d5">5dp</dimen>
+    <dimen name="sp_16">16sp</dimen>
+    <dimen name="sp_12">12sp</dimen>
+    <dimen name="dp_100">100dp</dimen>
 </resources>
